--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,7 +8,7 @@ on:
       - main
     paths:
       - "**.py"
-      - ".github/workflows/linter.yml"
+      - ".github/workflows/lint.yml"
   pull_request:
     branches:
       - main
@@ -37,7 +37,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install -r requirements/requirements.txt
+          python -m pip install -r requirements.txt
           python -m pip install -r requirements/development.txt
 
       - name: Format with black
